# gqt

./: .gitignore  Cargo.toml  GEMINI.md  README.md  journal.md  license.md  prd.md  spec.md  todo.md
src/: actions.rs  app.rs  client.rs  config.rs  db.rs  keys.rs  main.rs  models.rs  sync.rs  ui.rs  wizard.rs
src/commands/: add.rs  mod.rs
src/gqueues/: client.rs  mod.rs  models.rs
