[package]
name = "gqt"
version = "0.1.1"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
chrono = { version = "0.4.44", features = ["serde"] }
crossterm = "0.29.0"
ratatui = "0.30.0"
reqwest = { version = "0.13.3", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.52.1", features = ["full"] }
uuid = { version = "1.23.1", features = ["serde", "v4"] }
