[package]
name = "gqt"
version = "0.1.24"


edition = "2024"

[dependencies]
anyhow = "1.0.102"
chrono = { version = "0.4.44", features = ["serde"] }
crossterm = "0.29.0"
directories = "6.0.0"
html-escape = "0.2.13"
log = "0.4.29"
ratatui = "0.30.0"
regex = "1.12.3"
reqwest = { version = "0.13.3", features = ["json"] }
rusqlite = { version = "0.39.0", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
simplelog = "0.12.2"
thiserror = "2.0.18"
tokio = { version = "1.52.1", features = ["full"] }
toml = "1.1.2"
uuid = { version = "1.23.1", features = ["serde", "v4"] }
