[package]
name = "gqt"
version = "0.1.27"
authors = ["Syntax and Scale LLC <contact@syntaxandscale.com>"]
edition = "2024"
description = "A terminal-based user interface (TUI) for managing GQueues tasks"
homepage = "https://github.com/SyntaxAndScale/gqt"
repository = "https://github.com/SyntaxAndScale/gqt"
readme = "README.md"
keywords = ["gqueues", "tui", "task-manager", "cli"]
categories = ["command-line-utilities"]

[dependencies]
gqueues-api-rs = { path = "../gqueues-api-rs" }
anyhow = "1.0.102"
chrono = { version = "0.4.44", features = ["serde"] }
crossterm = "0.29.0"
directories = "6.0.0"
html-escape = "0.2.13"
log = "0.4.29"
ratatui = "0.30.0"
regex = "1.12.3"
reqwest = { version = "0.13.3", features = ["json"] }
rusqlite = { version = "0.39.0", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
simplelog = "0.12.2"
thiserror = "2.0.18"
tokio = { version = "1.52.1", features = ["full"] }
toml = "1.1.2"
uuid = { version = "1.23.1", features = ["serde", "v4"] }
clap = { version = "4.6.1", features = ["derive"] }
indicatif = "0.17.11"

[dev-dependencies]
tempfile = "3.16.0"
